[package]
name = "afp"
version = "0.1.10"
edition = "2021"
rust-version = "1.65.0"
repository = "https://github.com/Slimemaster0/afp"
description = "A fast fetch program written in rust"
readme = "README.md"
homepage = "https://github.com/Slimemaster0/afp"
license = "GPL-3.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
systemstat = "0.2.2"
futures = "0.3"
